Bug 31760: Fix contrast of 'separator'
This patch increases the contrast of the separator pipe visible in the
staff client upper right corner of the header bar.

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -3256,7 +3256,7 @@ button,
 }
 
 .separator {
-    color: #666;
+    color: #bfbfbf;
     padding: 0 .2em;
 }
 
